docs/platforms/winpack_dldt/2021.4/sub.md
# Subtree Keyword Index for `platforms/winpack_dldt/2021.4/`

## Scope

This keyword index covers **all files** under `platforms/winpack_dldt/2021.4/` recursively, including all subdirectories.

**Statistics:**
- **Total Files in Subtree**: 7
- **Total Unique Keywords**: 279
- **Direct Files**: 7
- **Subfolders**: 0

## Keywords A-Z

The following keywords, identifiers, and technical terms appear in files within this subtree:


### A

**ALIAS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ARG_NAME** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ARG_TYPE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**addIeTarget** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add_common_target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add_cpplint_target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add_executable** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add_ie_target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add_library** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**add_subdirectory** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**all_sources** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**always** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**and** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**applyPatch** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**are** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**auto_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**autoplugin** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))


### B

**b4c1547fc** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**backend** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**bc73ab5b1** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**bin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))

**build_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_config** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_debug** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**build_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**built** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### C

**CI_BUILD_NUMBER** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**CMAKE_CURRENT_BINARY_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**CMAKE_CURRENT_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**CMAKE_CXX_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**CMAKE_MODULE_LINKER_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**CMAKE_SHARED_LINKER_FLAGS_RELEASE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**CMakeLists** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**COMPONENT** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Copyright** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**Corporation** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**Coverage** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Create** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**cache** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**clDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cmake** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**cmake_minimum_required** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**com** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**common** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**config** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**copy_bin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copy_dll** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**copytree** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**cpp** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### D

**DEBUG** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**Debug** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**Deep** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**Developer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**d49f16a4d** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**def** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**deployment_tools** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**developer_package** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**df7091e51** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**diff** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**directory** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**disable** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**disabled** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**dldt** - Found in 6 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**dll** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**dll_suffix** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**docs** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**dummy** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### E

**ENABLE_PYTHON** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ENABLE_TESTS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**EXCLUDE_FROM_ALL** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**EXECUTABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Engine** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**e0706a72e** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**e0e6745b1** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**e8ed1a5c4** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ef962145a** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**elf** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**else** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**elseif** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**endfunction** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**endif** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**engine** - Found in 4 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**environ** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))

**etc** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**even** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### F

**FALSE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**FOR_SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**f9548339d** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**fe57b29dd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**file** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**flags** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**for** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**format_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**from** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**function** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### G

**GLOB_RECURSE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**gflags** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**git** - Found in 4 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**github** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**global** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**graph** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**graph_transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### H

**HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**HeteroPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**hetero_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**hpp** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**https** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))


### I

**ICF** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**IE_MAIN_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**IE_STATIC_DEPENDENT_FILES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**IE_VERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VERSION_MAJOR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VERSION_MINOR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VS_VER_COMMENTS_STR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VS_VER_COMPANY_NAME_STR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VS_VER_COPYRIGHT_STR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VS_VER_FILEVERSION_STR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VS_VER_PRODUCTNAME_STR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**IE_VS_VER_PRODUCTVERSION_STR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**INTERFACE_INCLUDE_DIRECTORIES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Inference** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**Intel** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**Invalid** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ie_add_api_validator_post_build_step** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ie_add_vs_version_file** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**ie_bridges** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ie_build_samples** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ie_faster_build** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ie_generate_dev_package_config** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ie_samples_utils** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**iff** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**include** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**index** - Found in 4 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**inference** - Found in 4 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**inference_engine** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_ir_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_ir_readerd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_ir_v7_reader** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_legacy** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_legacyd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_lp_transformations** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_preproc** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engine_preproc_s** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**inference_engine_transformations** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inference_engined** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**inside** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**install** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**intel64** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### J

**json** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### K

**kept** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### L

**LIBRARY_HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**LIBRARY_SRC** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**LICENSE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**Learning** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**legacy_api** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**lib** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**library** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**licenses** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### M

**MKLDNNPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**MultiDevicePlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ma2x8x** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**message** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**mkldnn** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**mkldnn_plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**multi_device** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**multidevice** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**must** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**mvcmd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**myriadPlugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### N

**NAME** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**NGRAPH_INTERPRETER_ENABLE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**name** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ngraph** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**ngraphd** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**not** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### O

**OBJECT** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**ONLY** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**OPT** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**OpenCV** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**OpenVINO** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**OpenVINO_MAIN_SOURCE_DIR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**object** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**opencv** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**opencv_winpack_dldt** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))

**openvino_common** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**openvino_developer_export_targets** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**openvinotoolkit** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**org** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))


### P

**PRIVATE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**PUBLIC** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**PUBLIC_HEADERS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**package** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**patch** - Found in 5 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**pcie** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**pdb** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**platforms** - Found in 7 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**plugin** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**plugin_api_sr** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**plugins** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**prepare_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**preprocessing** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**project** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**python** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### R

**REF** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**Release** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**required** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**rm_one** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**runtime** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### S

**SEND_ERROR** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**SHARED** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**SOURCES** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**STATIC** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**STATIC_IE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**STREQUAL** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Static** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**same** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**samples** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**self** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**set** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**set_ie_threading_interface_for** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**should** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**specified** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**src** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**srcdir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**support** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**sysroot** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_bin_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_ie_lib_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysroot_license_dir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**sysrootdir** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### T

**TARGET** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**TARGETS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**TARGET_NAME** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**TARGET_OBJECTS** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**TARGET_PROPERTY** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**TOUCH** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**TRUE** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Template** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**target** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**target_include_directories** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**target_link_libraries** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**targets** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**tbb** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**temp** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**test** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**tests** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**the** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**they** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**toolkit** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**tools** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**transformations** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**transformer** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**txt** - Found in 3 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))

**type** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### U

**UNITY** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Unit** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**unit** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**unused** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**usb** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))

**used** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### V

**VERSION** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))

**version** - Found in 2 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**vpu** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**vpu_common_lib_test_static** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**vs_version** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))


### W

**WIN32** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**Windows** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**which** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**wiki** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))

**winpack_dldt** - Found in 7 files:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-pdb.patch](20210630-dldt-pdb.patch_docs.md) ([keywords](20210630-dldt-pdb.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/build.config.py](build.config.py_docs.md) ([keywords](build.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-vs-version.patch](20210630-dldt-vs-version.patch_docs.md) ([keywords](20210630-dldt-vs-version.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-multidevice-autoplugin.patch](20210630-dldt-disable-multidevice-autoplugin.patch_docs.md) ([keywords](20210630-dldt-disable-multidevice-autoplugin.patch_kw.md))
  - [platforms/winpack_dldt/2021.4/patch.config.py](patch.config.py_docs.md) ([keywords](patch.config.py_kw.md))

**with** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))


### X

**xml** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/sysroot.config.py](sysroot.config.py_docs.md) ([keywords](sysroot.config.py_kw.md))


### _

**_legacy_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**_obj** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))

**_plugin_api_cpplint** - Found in 1 file:
  - [platforms/winpack_dldt/2021.4/20210630-dldt-disable-unused-targets.patch](20210630-dldt-disable-unused-targets.patch_docs.md) ([keywords](20210630-dldt-disable-unused-targets.patch_kw.md))



## Folder-Level Navigation

### Keyword Distribution by Subfolder



### Most Common Keywords

The most frequently appearing keywords in this subtree:

- **platforms**: 7 occurrences
- **winpack_dldt**: 7 occurrences
- **dldt**: 6 occurrences
- **patch**: 5 occurrences
- **inference**: 4 occurrences
- **git**: 4 occurrences
- **engine**: 4 occurrences
- **index**: 4 occurrences
- **pdb**: 3 occurrences
- **OpenVINO**: 3 occurrences
- **txt**: 3 occurrences
- **CMakeLists**: 3 occurrences
- **name**: 3 occurrences
- **diff**: 3 occurrences
- **disable**: 3 occurrences
- **config**: 3 occurrences
- **set**: 2 occurrences
- **build**: 2 occurrences
- **endif**: 2 occurrences
- **add_subdirectory**: 2 occurrences
- **developer_package**: 2 occurrences
- **targets**: 2 occurrences
- **src**: 2 occurrences
- **used**: 2 occurrences
- **package**: 2 occurrences
- **for**: 2 occurrences
- **inference_engine**: 2 occurrences
- **else**: 2 occurrences
- **unused**: 2 occurrences
- **cmake**: 2 occurrences
- **include**: 2 occurrences
- **CI_BUILD_NUMBER**: 2 occurrences
- **version**: 2 occurrences
- **multidevice**: 2 occurrences
- **autoplugin**: 2 occurrences
- **CMAKE_CURRENT_SOURCE_DIR**: 1 occurrences
- **REF**: 1 occurrences
- **DEBUG**: 1 occurrences
- **OPT**: 1 occurrences
- **IE_MAIN_SOURCE_DIR**: 1 occurrences
- **project**: 1 occurrences
- **ICF**: 1 occurrences
- **e0706a72e**: 1 occurrences
- **VERSION**: 1 occurrences
- **CMAKE_MODULE_LINKER_FLAGS_RELEASE**: 1 occurrences
- **cmake_minimum_required**: 1 occurrences
- **CMAKE_CXX_FLAGS_RELEASE**: 1 occurrences
- **CMAKE_SHARED_LINKER_FLAGS_RELEASE**: 1 occurrences
- **OpenVINO_MAIN_SOURCE_DIR**: 1 occurrences
- **iff**: 1 occurrences
- **all_sources**: 1 occurrences
- **TARGET**: 1 occurrences
- **legacy_api**: 1 occurrences
- **python**: 1 occurrences
- **STATIC_IE**: 1 occurrences
- **common**: 1 occurrences
- **b4c1547fc**: 1 occurrences
- **TARGET_OBJECTS**: 1 occurrences
- **from**: 1 occurrences
- **Coverage**: 1 occurrences
- **IE_STATIC_DEPENDENT_FILES**: 1 occurrences
- **vpu**: 1 occurrences
- **built**: 1 occurrences
- **ie_samples_utils**: 1 occurrences
- **they**: 1 occurrences
- **SOURCES**: 1 occurrences
- **vpu_common_lib_test_static**: 1 occurrences
- **addIeTarget**: 1 occurrences
- **GLOB_RECURSE**: 1 occurrences
- **d49f16a4d**: 1 occurrences
- **samples**: 1 occurrences
- **should**: 1 occurrences
- **dummy**: 1 occurrences
- **Unit**: 1 occurrences
- **TRUE**: 1 occurrences
- **always**: 1 occurrences
- **e0e6745b1**: 1 occurrences
- **EXECUTABLE**: 1 occurrences
- **same**: 1 occurrences
- **UNITY**: 1 occurrences
- **test**: 1 occurrences
- **endfunction**: 1 occurrences
- **support**: 1 occurrences
- **PUBLIC_HEADERS**: 1 occurrences
- **ALIAS**: 1 occurrences
- **ENABLE_PYTHON**: 1 occurrences
- **object**: 1 occurrences
- **with**: 1 occurrences
- **NGRAPH_INTERPRETER_ENABLE**: 1 occurrences
- **unit**: 1 occurrences
- **inference_engine_preproc_s**: 1 occurrences
- **SEND_ERROR**: 1 occurrences
- **ARG_NAME**: 1 occurrences
- **TARGETS**: 1 occurrences
- **LIBRARY_SRC**: 1 occurrences
- **Create**: 1 occurrences
- **openvino_developer_export_targets**: 1 occurrences
- **openvino_common**: 1 occurrences
- **WIN32**: 1 occurrences
- **elseif**: 1 occurrences
